# CHIP-8-Emulator

./: .gitignore  CMakeLists.txt  Makefile  README.md  sources.mk  tests.mk
headers/: chip8.h  font.h  graphics.h  keyboard.h  opcode.h  types.h
include/: audio.h  chip8.h  graphics.h  logger.h  opcode.h
srcs/: audio.c  core.c  font.c  graphics.c  keyboard.c  logger.c  main.c  opcodes.c  utils.c
tests/: test_opcode.c
